--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,5 +1,35 @@
 
 
 body {
-    background-color: aqua;
+    background-color: lightcoral;
+}
+
+.reponse {
+    background-color:lightblue;
+    display: flex;
+    justify-content: center;
+    border: black 1px solid;
+    align-items: center;
+}
+
+.question-character {
+    text-align: center;
+    font-size: 20px;
+    
+    text-transform: uppercase;
+}
+
+.flex-center {
+    display: flex;
+    justify-content: center;
+}
+
+header {
+    background-color: lightgreen;
+    text-align: center;
+}
+
+footer {
+    background-color: lightseagreen;
+    text-align: center;
 }
